examples/good/06_2_void_function.soy
def print2(a = str) {
    print(a);
    print(a);
}

res = print2("Hello World!");
print(res); # None 

print("6_2_PASSED");