examples/bad/09_1_reference_to_local_def.soy
def func() {
    def a() {
        print("a");
    }
    a();
}

a(); # a is not visible here